2nd fix re-align profile pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ margin-bottom: var(--mb-4);
   .home__img{
   position: absolute;
   right: 45px;
-  bottom: 60px;
+  bottom: 30px;
   width: 190px;
 }
  .home__social{
